[package]
name = "sni-blocker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.46", features = ["derive"] }
log = "0.4.27"
pcap = "2.3.0"
simple_logger = "5.0.0"
smoltcp = { version = "0.12.0", default-features = false, features = [
  "proto-ipv4",
  "medium-ethernet",
  "socket-raw",
] }
socket2 = { version = "0.6.0", features = ["all"] }
tls-parser = "0.12.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "s"
